fix n^2 memory usage ;-;